remove comments and fix header

--- a/email-marketing/index.html
+++ b/email-marketing/index.html
@@ -91,16 +91,13 @@
   <body>
     <center class="wrapper">
       <table class="main" width="100%">
-        <!-- Logo -->
         <tr>
           <td class="center">
             <a href="https://propz.com/">
-              <img src="assets/logo.png" alt="Proz Logo" title="Proz Logo" width="100%" />
+              <img src="assets/logo.png" alt="Proz Logo" title="Proz Logo" width="600px" />
             </a>
           </td>
         </tr>
-
-        <!-- Title -->
         <tr>
           <td class="center">
             <p style="font-size: 30px; font-weight: bold; margin-bottom: 0">
@@ -108,8 +105,6 @@
             </p>
           </td>
         </tr>
-
-        <!-- Offer -->
         <tr class="offers">
           <td>
             <p class="shadow top"></p>
@@ -208,7 +203,7 @@
                   <table class="column">
                     <tr>
                       <td>
-                        <img src="assets/product-img-5.jpg" alt="Headseat" width="130" />
+                        <img src="assets/product-img-6.jpg" alt="Headseat" width="130" />
                         <p style="color: #888ebe">
                           Gabinete Gamer Ninja Kotaro, Mid Tower, Vidro Temperado, ATX, Black, Sem
                           Fonte, Sem Fan, T005G
