add anchor to products

--- a/email-marketing/index.html
+++ b/email-marketing/index.html
@@ -114,17 +114,19 @@
                   <table class="column">
                     <tr>
                       <td>
-                        <img src="assets/product-img-1.jpg" alt="Headseat" width="130" />
-                        <p style="color: #888ebe">
-                          Headset Gamer Havit, Drivers 53mm, Microfone Plugável, P2, PC, PS4, XBOX
-                          ONE, Preto - HV-H2002D
-                        </p>
-                        <p style="font-size: 10px">
-                          Valido no dia 06/06/2023, em todas as lojas fisicas e no App
-                        </p>
-                        <p style="color: #9c535e; font-size: 16px; font-weight: bold">
-                          Por: R$ 179,99
-                        </p>
+                        <a href="#">
+                          <img src="assets/product-img-1.jpg" alt="Headseat" width="130" />
+                          <p style="color: #888ebe">
+                            Headset Gamer Havit, Drivers 53mm, Microfone Plugável, P2, PC, PS4, XBOX
+                            ONE, Preto - HV-H2002D
+                          </p>
+                          <p style="font-size: 10px">
+                            Valido no dia 06/06/2023, em todas as lojas fisicas e no App
+                          </p>
+                          <p style="color: #9c535e; font-size: 16px; font-weight: bold">
+                            Por: R$ 179,99
+                          </p>
+                        </a>
                       </td>
                     </tr>
                   </table>
@@ -132,17 +134,19 @@
                   <table class="column">
                     <tr>
                       <td>
-                        <img src="assets/product-img-2.jpg" alt="Headseat" width="130" />
-                        <p style="color: #888ebe">
-                          WCG-Leather Gaming Chair, Cadeira do Computador, Internet Cafe, Internet
-                          Cafe, Cadeira de Escritório
-                        </p>
-                        <p style="font-size: 10px">
-                          Valido no dia 06/06/2023, em todas as lojas fisicas e no App
-                        </p>
-                        <p style="color: #9c535e; font-size: 16px; font-weight: bold">
-                          Por: R$212,14
-                        </p>
+                        <a href="#">
+                          <img src="assets/product-img-2.jpg" alt="Headseat" width="130" />
+                          <p style="color: #888ebe">
+                            WCG-Leather Gaming Chair, Cadeira do Computador, Internet Cafe, Internet
+                            Cafe, Cadeira de Escritório
+                          </p>
+                          <p style="font-size: 10px">
+                            Valido no dia 06/06/2023, em todas as lojas fisicas e no App
+                          </p>
+                          <p style="color: #9c535e; font-size: 16px; font-weight: bold">
+                            Por: R$212,14
+                          </p>
+                        </a>
                       </td>
                     </tr>
                   </table>
@@ -150,16 +154,18 @@
                   <table class="column">
                     <tr>
                       <td>
-                        <img src="assets/product-img-3.jpg" alt="Headseat" width="130" />
-                        <p style="color: #888ebe">
-                          Teclado Gamer Dazz Rapid Fire Revolution, Rainbow, ABNT2 - 625203
-                        </p>
-                        <p style="font-size: 10px">
-                          Valido no dia 06/06/2023, em todas as lojas fisicas e no App
-                        </p>
-                        <p style="color: #9c535e; font-size: 16px; font-weight: bold">
-                          Por: R$ 49,99
-                        </p>
+                        <a href="#">
+                          <img src="assets/product-img-3.jpg" alt="Headseat" width="130" />
+                          <p style="color: #888ebe">
+                            Teclado Gamer Dazz Rapid Fire Revolution, Rainbow, ABNT2 - 625203
+                          </p>
+                          <p style="font-size: 10px">
+                            Valido no dia 06/06/2023, em todas as lojas fisicas e no App
+                          </p>
+                          <p style="color: #9c535e; font-size: 16px; font-weight: bold">
+                            Por: R$ 49,99
+                          </p>
+                        </a>
                       </td>
                     </tr>
                   </table>
@@ -167,17 +173,19 @@
                   <table class="column">
                     <tr>
                       <td>
-                        <img src="assets/product-img-4.jpg" alt="Headseat" width="130" />
-                        <p style="color: #888ebe">
-                          Mouse Gamer Redragon Cobra, Chroma RGB, 12400DPI, 7 Botões, Preto - M711
-                          V2
-                        </p>
-                        <p style="font-size: 10px">
-                          Valido no dia 06/06/2023, em todas as lojas fisicas e no App
-                        </p>
-                        <p style="color: #9c535e; font-size: 16px; font-weight: bold">
-                          Por: R$ 114,99
-                        </p>
+                        <a href="#">
+                          <img src="assets/product-img-4.jpg" alt="Headseat" width="130" />
+                          <p style="color: #888ebe">
+                            Mouse Gamer Redragon Cobra, Chroma RGB, 12400DPI, 7 Botões, Preto - M711
+                            V2
+                          </p>
+                          <p style="font-size: 10px">
+                            Valido no dia 06/06/2023, em todas as lojas fisicas e no App
+                          </p>
+                          <p style="color: #9c535e; font-size: 16px; font-weight: bold">
+                            Por: R$ 114,99
+                          </p>
+                        </a>
                       </td>
                     </tr>
                   </table>
@@ -185,17 +193,19 @@
                   <table class="column">
                     <tr>
                       <td>
-                        <img src="assets/product-img-5.jpg" alt="Headseat" width="130" />
-                        <p style="color: #888ebe">
-                          Monitor Gamer Concórdia, 23.6 Polegadas, LED FULL HD, 75hz, HDMI VGA,
-                          Curvo - Cz236f
-                        </p>
-                        <p style="font-size: 10px">
-                          Valido no dia 06/06/2023, em todas as lojas fisicas e no App
-                        </p>
-                        <p style="color: #9c535e; font-size: 16px; font-weight: bold">
-                          Por: R$ 615,12
-                        </p>
+                        <a href="#">
+                          <img src="assets/product-img-5.jpg" alt="Headseat" width="130" />
+                          <p style="color: #888ebe">
+                            Monitor Gamer Concórdia, 23.6 Polegadas, LED FULL HD, 75hz, HDMI VGA,
+                            Curvo - Cz236f
+                          </p>
+                          <p style="font-size: 10px">
+                            Valido no dia 06/06/2023, em todas as lojas fisicas e no App
+                          </p>
+                          <p style="color: #9c535e; font-size: 16px; font-weight: bold">
+                            Por: R$ 615,12
+                          </p>
+                        </a>
                       </td>
                     </tr>
                   </table>
@@ -203,17 +213,19 @@
                   <table class="column">
                     <tr>
                       <td>
-                        <img src="assets/product-img-6.jpg" alt="Headseat" width="130" />
-                        <p style="color: #888ebe">
-                          Gabinete Gamer Ninja Kotaro, Mid Tower, Vidro Temperado, ATX, Black, Sem
-                          Fonte, Sem Fan, T005G
-                        </p>
-                        <p style="font-size: 10px">
-                          Valido no dia 06/06/2023, em todas as lojas fisicas e no App
-                        </p>
-                        <p style="color: #9c535e; font-size: 16px; font-weight: bold">
-                          Por: R$ 179,00
-                        </p>
+                        <a href="#">
+                          <img src="assets/product-img-6.jpg" alt="Headseat" width="130" />
+                          <p style="color: #888ebe">
+                            Gabinete Gamer Ninja Kotaro, Mid Tower, Vidro Temperado, ATX, Black, Sem
+                            Fonte, Sem Fan, T005G
+                          </p>
+                          <p style="font-size: 10px">
+                            Valido no dia 06/06/2023, em todas as lojas fisicas e no App
+                          </p>
+                          <p style="color: #9c535e; font-size: 16px; font-weight: bold">
+                            Por: R$ 179,00
+                          </p>
+                        </a>
                       </td>
                     </tr>
                   </table>
